--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,7 @@ h5 {
 body {
   background-image: url('../images/bg-header-desktop.png');
   background-repeat: no-repeat;
-  background-siez: contain;
+  background-size: contain;
 }
 
 @media (max-witdh: 576px) {
