--- a/input.css
+++ b/input.css
@@ -27,7 +27,7 @@
 body {
   background-image: url('../images/bg-header-desktop.png');
   background-repeat: no-repeat;
-  background-siez: contain;
+  background-size: contain;
 }
 
 @media (max-witdh: 576px) {
