--- a/css/style.css
+++ b/css/style.css
@@ -645,12 +645,24 @@ h5 {
   display: none;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .h-32 {
   height: 8rem;
 }
 
 .h-\[40px\] {
   height: 40px;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-32 {
@@ -749,13 +761,9 @@ h5 {
   border-radius: 0.125rem;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+.bg-darkGrayishBlue {
+  --tw-bg-opacity: 1;
+  background-color: hsl(210 10% 33% / var(--tw-bg-opacity));
 }
 
 .bg-gray-50 {
@@ -771,11 +779,6 @@ h5 {
 .bg-strongCyan {
   --tw-bg-opacity: 1;
   background-color: hsl(171 66% 44% / var(--tw-bg-opacity));
-}
-
-.bg-darkGrayishBlue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(210 10% 33% / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -803,10 +806,6 @@ h5 {
 
 .pt-16 {
   padding-top: 4rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .text-center {
@@ -937,7 +936,7 @@ body {
   height: 3px;
   top: 0;
   left: 0;
-  background: #9c9aa6;
+  background: #181919;
   transform: rotate(0);
   transition: all 0.5s;
 }
