--- a/css/style.css
+++ b/css/style.css
@@ -599,6 +599,11 @@ h5 {
   margin-right: auto;
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
 .my-16 {
   margin-top: 4rem;
   margin-bottom: 4rem;
@@ -607,16 +612,6 @@ h5 {
 .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
-}
-
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
 }
 
 .mb-10 {
@@ -659,7 +654,7 @@ h5 {
   height: 8rem;
 }
 
-.h-8 {
+.h-\[2rem\] {
   height: 2rem;
 }
 
